--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   just_audio: ^0.9.40
   screenshot: ^3.0.0
   permission_handler: ^11.3.1
+  share_plus: ^10.0.2
 
 dev_dependencies:
   flutter_test:
